--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -71,7 +71,7 @@
                         </li>
                         <li>
                             <a href="@Url.Action("Index", "Subscription")">
-                                <i class="fa fa-flag fa-fw"></i> Report Schedules
+                                <i class="fa fa-flag fa-fw"></i> Report Subscription
                             </a>
                         </li>
                     </ul>
