--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -93,20 +93,20 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
     <div class="row">
         <div class="col-md-4">
             <a>
-                <img src="~/Octagon/assets/img/1.jpg" id="team" style="width: 100%;"> 
+                <img src="~/Octagon/assets/img/1.jpg" id="team"> 
                 <!--<h2 style="color:rgb(129,124,124);">TEAM</h2> <p>&nbsp;</p>-->
             </a>
         </div>
 
         <div class="col-md-4">
             <a> 
-                <img src="~/Octagon/assets/img/2.jpg" id="vision" style="width: 100%;">
+                <img src="~/Octagon/assets/img/2.jpg" id="vision">
                 <!--<h2 style="color:rgb(129,124,124);">VISION</h2> <p>&nbsp;</p>-->
             </a>
         </div>
         <div class="col-md-4">
             <a>
-                <img src="~/Octagon/assets/img/3.jpg" id="innovation" style="width: 100%;"> 
+                <img src="~/Octagon/assets/img/3.jpg" id="innovation" > 
                 <!--<h2 style="color:rgb(129,124,124);">INNOVATION</h2> <p>&nbsp;</p>-->
             </a>
         </div>
@@ -114,8 +114,8 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
 </div>
 
 <div class="container-fluid" id="container-fluid">
-    <div >
-        <img src="~/Octagon/assets/img/banner2-1.jpg" style="width: 100%;"/> 
+    <div class="banner-home"  >
+        <img src="~/Octagon/assets/img/banner-octa.jpg"> 
     </div>
 
     <br>
