--- a/OctagonPlatform/Octagon/assets/css/styles2.css
+++ b/OctagonPlatform/Octagon/assets/css/styles2.css
@@ -122,3 +122,40 @@ span.psw {
   }
 }
 
+/****** card home *********/
+#team {
+    width: 100%;
+    padding: 8px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+}
+
+#vision {
+    width: 100%;
+    padding: 8px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+}
+
+#innovation {
+    width: 100%;
+    padding: 8px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.18);
+}
+
+
+
+
+/******END card home *********/
+/******Banner home*********/
+.banner-home {
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.banner-home img {
+    width: 100%;
+}
+
+/******END Banner home*********/
