--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -107,7 +107,7 @@
                         }
                         var perm = r.join(', ');
                         $("#permissions").val(perm);
-                        alert(perm);
+                       // alert(perm);
                         //alert(r.join(', '));
                         //$('#event_result').html('Selected: ' + r.join(', '));
                     })
