ya funciona el partialfilter

--- a/OctagonPlatform/Views/Subscription/Index.cshtml
+++ b/OctagonPlatform/Views/Subscription/Index.cshtml
@@ -42,6 +42,9 @@
 <script>
      var url = '@Url.Action("AutoUser", "Users")';
     var filterreport = '@Url.Action("FilterReport", "Subscription")';
+    var filterreport2 = '@Url.Action("FilterReportEdit", "Subscription")';
+
+
     var list = '@Url.Action("List", "Subscription")';
      var url2 = '@Url.Action("Index", "Subscription", new RouteValueDictionary(new { a = 1 }), "http", string.Empty)';
 </script>
