--- a/OctagonPlatform/Views/Subscription/Table.cshtml
+++ b/OctagonPlatform/Views/Subscription/Table.cshtml
@@ -1,5 +1,8 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.SubscriptionVM
-
+@using OctagonPlatform.Models;
+@{ 
+    SubscriptionModel vmodel = (SubscriptionModel)TempData["subscription"];
+}
 <table class="table">
     <tr>
         <th>
@@ -48,17 +51,27 @@
                 @Html.DisplayFor(modelItem => item.LastRunDate)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+              
+                @Ajax.ActionLink(" ", "Edit", new { id = item.Id },
+            new AjaxOptions
+            {
+                HttpMethod = "GET",
+                UpdateTargetId = "SubscriptionList",
+                InsertionMode = InsertionMode.Replace,
+                OnSuccess = "SuccessEdit(data, "+ item.Id + ");"
+            },
+            new { @class = "btn btn-info glyphicon glyphicon-edit" })
+               
 
                 @Ajax.ActionLink(" ", "Delete", new { id = item.Id },
-                             new AjaxOptions
-                             {
-                                 HttpMethod = "POST",
-                                 UpdateTargetId = "SubscriptionList",
-                                 InsertionMode = InsertionMode.Replace,
-                                 Confirm = "Are you Sure You Want to Delete " + @item.ReportName
-                             },
-                             new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+               new AjaxOptions
+               {
+                   HttpMethod = "POST",
+                   UpdateTargetId = "SubscriptionList",
+                   InsertionMode = InsertionMode.Replace,
+                   Confirm = "Are you Sure You Want to Delete " + @item.ReportName
+               },
+               new { @class = "btn btn-danger glyphicon glyphicon-trash" })
             </td>
         </tr>
     }
@@ -74,11 +87,13 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ReportId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("ReportId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ReportId, "", new { @class = "text-danger" })
+                   
+                        @Html.DropDownList("ReportId", null, htmlAttributes: new { @class = "form-control" })
+                   
+                        @Html.ValidationMessageFor(model => model.ReportId, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div id="PartialFilter"> </div>
+            <div id="PartialFilter"></div>
         </div>
         <div class="col-md-6">
             <h3>Scheduling</h3>   <hr />
