--- a/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/_PartialForm.cshtml
@@ -40,7 +40,7 @@ else
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2 from" })
             <div class="col-md-10">
-                <label>@Html.DropDownList("StartDate", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control" })Day(s) Previous</label>
+                 <label>@Html.DropDownList("Start Date", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control", @name = "StartDate" })Day(s) Previous</label>
 
                 @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
             </div>
