--- a/OctagonPlatform/Views/Subscription/Table.cshtml
+++ b/OctagonPlatform/Views/Subscription/Table.cshtml
@@ -1,8 +1,6 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.SubscriptionVM
 @using OctagonPlatform.Models;
-@{ 
-    SubscriptionModel vmodel = (SubscriptionModel)TempData["subscription"];
-}
+
 <table class="table">
     <tr>
         <th>
@@ -87,10 +85,9 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ReportId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                   
-                        @Html.DropDownList("ReportId", null, htmlAttributes: new { @class = "form-control" })
-                   
-                        @Html.ValidationMessageFor(model => model.ReportId, "", new { @class = "text-danger" })
+
+                    @Html.DropDownList("ReportId", null, "-Select Report-", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ReportId, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div id="PartialFilter"></div>
