--- a/OctagonPlatform/Views/ReportsSmart/CashLoad/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad/_PartialForm.cshtml
@@ -59,10 +59,10 @@
 else
 {
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2 from" })
+            @Html.Label("Start Date", htmlAttributes: new { @class = "control-label col-md-2 from" })
             <div class="col-md-10">
-                <label>@Html.DropDownList("Start Date", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control",@name="StartDate" })Day(s) Previous</label>
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                <label>@Html.DropDownList("Start Date", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control"})Day(s) Previous</label>
+              
             </div>
         </div>
         <div class="form-group">
