--- a/OctagonPlatform/Views/Schedule/Delete.cshtml
+++ b/OctagonPlatform/Views/Schedule/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.ScheduleOnce
+﻿@model OctagonPlatform.Models.Schedule
 
 @{
     ViewBag.Title = "Delete";
@@ -11,13 +11,7 @@
     <h4>ScheduleOnce</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Time)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Time)
-        </dd>
+      
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
