--- a/OctagonPlatform/Views/Schedule/Edit.cshtml
+++ b/OctagonPlatform/Views/Schedule/Edit.cshtml
@@ -3,6 +3,34 @@
     ViewBag.Title = "Edit";
 }
 
+@{
+    string displayweek = "none", displaytime = "none", displayRepeatOn = "none", displayRepeatOnDay = "none", displayRepeatOnFirst = "none", displaystop = "none";
+    if (!string.IsNullOrEmpty(Model.RepeatOnDaysWeeks))
+    {
+        displayweek = "block";
+
+    }
+    if (!string.IsNullOrEmpty(Model.Time))
+    {
+        displaytime = "block";
+    }
+    if (Model.RepeatOn > 0)
+    {
+        displayRepeatOn = "block";
+    }
+    if (Model.RepeatOnDay > 0)
+    {
+        displayRepeatOnDay = "block";
+    }
+    if (!string.IsNullOrEmpty(Model.RepeatOnFirst))
+    {
+        displayRepeatOnFirst = "block";
+    }
+    if (!string.IsNullOrEmpty(Model.StopDate))
+    {
+        displaystop = "block";
+    }
+}
 
 
 @using (Html.BeginForm())
@@ -37,71 +65,83 @@
                     </div>
                 </div>
                 <div id="repeatsSelected">
-                    @if (Model.Time != "")
-                    {
-                        <div id="time">
+                  
+                    
+                        <div id="time" style="display:@displaytime">
                             <div class="form-group">
                                 @Html.Label("Time(CST)", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.DropDownListFor(model => model.Time, Model.DropDownTime, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+                                    @*@if (Model.Time != "")
+                                     {*@
+                                @Html.DropDownListFor(model => model.Time, Model.DropDownTime, new { @class = "form-control" })
+
+                                @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+                                   @* }*@
                                 </div>
                             </div>
                         </div>
-                    }
-                    @if (Model.RepeatOn > 0)
-                    {
-                        <div id="daily">
+                   
+                    
+                    
+                        <div id="daily" style="display:@displayRepeatOn">
                             <div class="form-group">
                                 @Html.Label("Repeat On", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    <span>
-                                        Every @Html.DropDownListFor(model => model.RepeatOn, Model.DropDownRepeatOn, new { @class = "form-control", @style = "width:20%;display:inline;" }) Day(s)
-                                    </span>
+                                    @*@if (Model.RepeatOn > 0)
+                                    {*@
+                                <span>
+                                    Every @Html.DropDownListFor(model => model.RepeatOn, Model.DropDownRepeatOn, new { @class = "form-control", @style = "width:20%;display:inline;" }) Day(s)
+                                </span>
 
                                     @Html.ValidationMessageFor(model => model.RepeatOn, "", new { @class = "text-danger" })
+                                    @*}*@
                                 </div>
                             </div>
 
                         </div>
-                    }
-                    @if (Model.RepeatOnDay > 0)
-                    {
-                        <div id="monthly">
+                    
+                   
+                    
+                        <div id="monthly" style="display:@displayRepeatOnDay">
                             <div class="form-group">
                                 @Html.Label("Repeat On", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    <span>
-                                        Day @Html.DropDownListFor(model => model.RepeatOnDay, Model.DropDownRepeatOnDay, new { @class = "form-control", @style = "width:20%;display:inline;" })
-                                    </span>
+                                    @*@if (Model.RepeatOnDay > 0)
+                                    {*@
+                                <span>
+                                    Day @Html.DropDownListFor(model => model.RepeatOnDay, Model.DropDownRepeatOnDay, new { @class = "form-control", @style = "width:20%;display:inline;" })
+                                </span>
                                     <span>
                                         Every @Html.DropDownListFor(model => model.RepeatOnMonth, Model.DropDownRepeatOnMonth, new { @class = "form-control", @style = "width:20%;display:inline;" })  Month(s)
                                     </span>
                                     @Html.ValidationMessageFor(model => model.RepeatOnDay, "", new { @class = "text-danger" })
                                     @Html.ValidationMessageFor(model => model.RepeatOnMonth, "", new { @class = "text-danger" })
-
+                                    @*}*@
                                 </div>
                             </div>
 
                         </div>
-                    }
-                    @if (Model.RepeatOnWeeks > 0)
-                    {
-                        <div id="weekly">
+                    
+                   
+                    
+                        <div id="weekly" style="display:@displayweek">
                             <div class="form-group">
                                 @Html.Label("Repeat On", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    <span>
-                                        Every   @Html.DropDownListFor(model => model.RepeatOnWeeks, Model.DropDownRepeatOnWeeks, new { @class = "form-control", @style = "width:20%;display:inline;" }) Week(s)
-                                    </span>
+                                    @*@if (Model.RepeatOnWeeks > 0)
+                                    {*@
+                                <span>
+                                    Every   @Html.DropDownListFor(model => model.RepeatOnWeeks, Model.DropDownRepeatOnWeeks, new { @class = "form-control", @style = "width:20%;display:inline;" }) Week(s)
+                                </span>
 
                                     @Html.ValidationMessageFor(model => model.RepeatOnWeeks, "", new { @class = "text-danger" })
+                                    @*}*@
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 @{
-                                    string daysweek = Model.RepeatOnDaysWeeks;
+                                    string daysweek = Model.RepeatOnDaysWeeks ?? "";
                                     string[] days = daysweek.Split('_');
 
                                 }
@@ -118,18 +158,20 @@
                                 </div>
                             </div>
                         </div>
-                    }
-                    @if (Model.RepeatOnFirst != "")
-                    {
-                        <div id="monthlyRelative">
+                    
+                    
+                    
+                        <div id="monthlyRelative" style="display:@displayRepeatOnFirst">
                             <div class="form-group">
                                 @Html.Label("Repeat On", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    <span>
-                                        The @Html.DropDownListFor(model => model.RepeatOnFirst, Model.DropDownRepeatOnFirst, new { @class = "form-control", @style = "width:20%;display:inline;" })
-                                        @Html.DropDownListFor(model => model.RepeatOnDay2, Model.DropDownRepeatOnDay2, new { @class = "form-control", @style = "width:20%;display:inline;" })
+                                    @*@if (Model.RepeatOnFirst != "")
+                                    {*@
+                                <span>
+                                    The @Html.DropDownListFor(model => model.RepeatOnFirst, Model.DropDownRepeatOnFirst, new { @class = "form-control", @style = "width:20%;display:inline;" })
+                                    @Html.DropDownListFor(model => model.RepeatOnDay2, Model.DropDownRepeatOnDay2, new { @class = "form-control", @style = "width:20%;display:inline;" })
 
-                                    </span>
+                                </span>
                                     <span>
                                         Every   @Html.DropDownListFor(model => model.RepeatOnMonth2, Model.DropDownRepeatOnMonth2, new { @class = "form-control", @style = "width:20%;display:inline;" }) Month(s)
                                     </span>
@@ -137,12 +179,12 @@
                                     @Html.ValidationMessageFor(model => model.RepeatOnMonth2, "", new { @class = "text-danger" })
                                     @Html.ValidationMessageFor(model => model.RepeatOnFirst, "", new { @class = "text-danger" })
 
-
+                                    @*}*@
 
                                 </div>
                             </div>
                         </div>
-                    }
+                    
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -151,16 +193,19 @@
                         @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @if (Model.StopDate != "")
-                {
-                    <div class="form-group" id="Stop">
+               
+                
+                    <div class="form-group" id="Stop" style="display:@displaystop">
                         @Html.LabelFor(model => model.StopDate, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.StopDate, new { htmlAttributes = new { @class = "form-control", @Value = "Continue Indefinite" } })
+                            @*@if (Model.StopDate != "")
+                            {*@
+                        @Html.EditorFor(model => model.StopDate, new { htmlAttributes = new { @class = "form-control", @Value = "Continue Indefinite" } })
                             @Html.ValidationMessageFor(model => model.StopDate, "", new { @class = "text-danger" })
+                          @*  }*@
                         </div>
                     </div>
-                }
+                
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Save" class="btn btn-primary" />
