arreglos en schedule

--- a/OctagonPlatform/Views/Schedule/Index.cshtml
+++ b/OctagonPlatform/Views/Schedule/Index.cshtml
@@ -99,7 +99,8 @@
             });
             $("#StopDate").datepicker({
                 dateFormat: "mm/dd/yy"
-            });
+                });
+                    //aqui se concatenen los dias de la semana que quiere recibir el reporte 
             $("#btn").click(function () {
 
                 var str = "";
