--- a/OctagonPlatform/Views/Subscription/Index.cshtml
+++ b/OctagonPlatform/Views/Subscription/Index.cshtml
@@ -47,6 +47,7 @@
 
     var list = '@Url.Action("List", "Subscription")';
     var url2 = '@Url.Action("Index", "Subscription", new RouteValueDictionary(new { a = 1 }), "http", string.Empty)';
+    var url_details_schedule = '@Url.Action("Details", "Schedule")';
     $(function () {
         $('#error').fadeIn('slow', function () {
             $('#error').fadeOut(5000);
