--- a/OctagonPlatform/Views/Shared/_LayoutOctagon.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutOctagon.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    @Styles.Render("~/Octagon/assets/css/styles.css")
     @Styles.Render("~/Octagon/assets/css/Contact-Form-Clean.css")
     @Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
     @Styles.Render("~/Octagon/assets/css/Contact-FormModal-Contact-Form-with-Google-Map.css")
