unified Dashboard.css to styles2.css and deleted Dashboard.css

--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -18,7 +18,7 @@
                 @Html.ValidationSummary(false, "", new { @class = "text-danger" })
             </p>
 
-            <div class="row mama">
+            <div class="row ter">
                 <div class="col-md-4">
                     <div> <h4 style="color: #1bacfb; font-size:25px; text-align:left"> <i class="fa fa-globe" style="font-size:25px;color:#1bacfb"></i> General Info</h4></div>
                     <hr style="width: 87%;margin-left: -15px;">
