--- a/OctagonPlatform/Views/Shared/Sections/Header.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Header.cshtml
@@ -19,7 +19,7 @@
 @Styles.Render("~/Octagon/assets/vendor/dist/css/sb-admin-2.css")
 @Styles.Render("~/Octagon/assets/vendor/morrisjs/morris.css")
 @Styles.Render("~/Octagon/assets/fonts/font-awesome.min.css")
-@Styles.Render("~/Octagon/assets/css/Dashboard.css")
+@*@Styles.Render("~/Octagon/assets/css/Dashboard.css")*@
 @Styles.Render("~/Octagon/assets/css/styles2.css")
 
 @Styles.Render("~/Content/cssjqueryui")
