--- a/OctagonPlatform/Views/Shared/Sections/OctagonNavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonNavBar.cshtml
@@ -16,7 +16,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div style="padding-top: 5px;padding-left: 55px;">
-                    <a href="#" style="font-size: 33px; color: #222222; margin: -14px; height: 0px; width: 238px;"><img src="~/Octagon/assets/img/favicon-32x32.png" id="logo" /><strong style="margin-left: 6px;">Octagon </strong></a>
+                    <a href="#" style="font-size: 33px; color: #222222; margin: -14px; height: 0px; width: 238px;">
+                    <img src="~/Octagon/assets/img/favicon-32x32.png" id="logo" />
+                    <strong style="margin-left: 6px;">Octagon </strong></a>
                 </div>
         </div>
         <div class="col-md-7" style="text-align:center;">
