--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -8,7 +8,7 @@
 <nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0">
     <!-- /.navbar-header -->
     <div class="row">
-        <div class="col-md-2" >
+        <div class="col-md-3" >
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -16,10 +16,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div style="padding-top: 5px;padding-left: 55px;">
-                <img src="~/Octagon/assets/img/logo.png" width="120">
+                    <a href="#" style="font-size: 33px; color: #222222; margin: -14px; height: 0px; width: 238px;">
+                        <img src="~/Octagon/assets/img/favicon-32x32.png" id="logo" />
+                        <strong style="margin-left: 6px;">Octagon </strong>
+                    </a>
                 </div>
         </div>
-        <div class="col-md-8" style="text-align:center;">
+        <div class="col-md-7" style="text-align:center;">
             <h1 class="businessName">ATM Managment Studio</h1>
         </div>
         <div class="col-md-2">
