footer to octagon, dashboard, home and octagon dashboard

--- a/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
@@ -17,7 +17,7 @@
 
         <!-- /#page-wrapper -->
     </div>
-    <div class="navbar navbar-fixed-bottom">
+    <div class="footer">
         @Html.Partial("Sections/Footer")
     </div>
     <!-- /#wrapper -->
