--- a/OctagonPlatform/Views/Shared/_LayoutHome.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutHome.cshtml
@@ -16,7 +16,7 @@
 <div id="page-wrapper">
     @RenderBody()
 </div>
-<div class="row">
+<div class="footer">
     @Html.Partial("Sections/Footer")
 </div>
 </body>
