--- a/OctagonPlatform/Octagon/assets/css/styles.css
+++ b/OctagonPlatform/Octagon/assets/css/styles.css
@@ -1,10 +1,26 @@
+html{
+    height:100%;
+}
 body {
     min-width: 279px;
+    position: relative;
+    margin:0;
+    min-height:100%;
+
+    padding-bottom:6rem;
 }
 
 
 
 /*****footer*****/
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
 #footer {
     font-family: Helvetica;
     color: white;
