--- a/OctagonPlatform/Views/Shared/_Layout.cshtml
+++ b/OctagonPlatform/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        <div class="footer">
+            @Html.Partial("Sections/Footer")
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
