--- a/OctagonPlatform/Views/Shared/_LayoutOctagonDashboard.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutOctagonDashboard.cshtml
@@ -17,7 +17,7 @@
 
         <!-- /#page-wrapper -->
     </div>
-    <div class="row">
+    <div class="footer">
         @Html.Partial("Sections/Footer")
     </div>
     <!-- /#wrapper -->
