--- a/OctagonPlatform/Views/Subscription/Table.cshtml
+++ b/OctagonPlatform/Views/Subscription/Table.cshtml
@@ -90,6 +90,14 @@
                 </div>
             </div>
             <div id="PartialFilter"></div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Format, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+
+                    @Html.DropDownList("Format", null,  htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Format, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
         <div class="col-md-6">
             <h3>Scheduling</h3>   <hr />
