--- a/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
@@ -15,7 +15,7 @@
         @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-      @Html.Partial("CashLoad/_PartialForm",Model)
+      @Html.Partial("_PartialForm",Model)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10" style="text-align: right;">
                 <input type="submit" value="Filter" class="btn btn-primary" />
@@ -33,7 +33,7 @@
             <h3 class="panel-title">Chart Cash Load</h3>
         </div>
         <div class="panel-body">
-            @Html.Partial("_PartialMorrisChart")
+            @Html.Partial("../_PartialMorrisChart")
            
         </div>
     </div>
@@ -47,10 +47,10 @@
         </div>
         <div class="panel-body">
             <div style="display:none" id="idhead">
-                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Cash load" } })
+                @Html.Partial("../_PartialHead", null, new ViewDataDictionary { { "Title", "Cash load" } })
                
             </div>
-            @Html.Partial("_PartialTable")
+            @Html.Partial("../_PartialTable")
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
