--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
@@ -15,7 +15,7 @@
         @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.Partial("CashManagement/_PartialForm", Model)
+        @Html.Partial("_PartialForm", Model)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10" style="text-align: right;">
                 <input type="submit" value="Filter" class="btn btn-primary" />
@@ -33,7 +33,7 @@
             <h3 class="panel-title">Chart Cash Management</h3>
         </div>
         <div class="panel-body">
-            @Html.Partial("_PartialMorrisChart")
+            @Html.Partial("../_PartialMorrisChart")
         </div>
     </div>
     <div class="panel panel-primary">
@@ -43,10 +43,10 @@
         </div>
         <div class="panel-body">
             <div style="display:none" id="idhead">
-                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
+                @Html.Partial("../_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
 
             </div>
-            @Html.Partial("_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
+            @Html.Partial("../_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
