--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
@@ -13,7 +13,7 @@
         @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.Partial("TerminalStatus/_PartialForm", Model)
+        @Html.Partial("_PartialForm", Model)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10" style="text-align: right;">
                 <input type="submit" value="Filter" class="btn btn-primary" />
@@ -32,7 +32,7 @@
             <h3 class="panel-title">Chart Terminal Status</h3>
         </div>
         <div class="panel-body">
-            @Html.Partial("_PartialMorrisChart")
+            @Html.Partial("../_PartialMorrisChart")
         </div>
     </div>
     <div class="panel panel-primary">
@@ -42,10 +42,10 @@
         </div>
         <div class="panel-body">
             <div style="display:none" id="idhead">
-                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
+                @Html.Partial("../_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
 
             </div>
-            @Html.Partial("_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
+            @Html.Partial("../_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
 
 
             <div>
