--- a/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
@@ -16,7 +16,7 @@
         @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.Partial("MonthlyTransactionSummary/_PartialForm", Model)
+        @Html.Partial("_PartialForm", Model)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10" style="text-align: right;">
@@ -37,10 +37,10 @@
         </div>
         <div class="panel-body">
             <div style="display:none" id="idhead">
-                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Monthly Transaction Summary" }, { "from", @TempData["from"] }, { "to", @TempData["to"] } })
+                @Html.Partial("../_PartialHead", null, new ViewDataDictionary { { "Title", "Monthly Transaction Summary" }, { "from", @TempData["from"] }, { "to", @TempData["to"] } })
 
             </div>
-            @Html.Partial("_PartialTableMonthlyTransaction", null, new ViewDataDictionary { { "orientation", "Landscape" } })
+            @Html.Partial("../_PartialTableMonthlyTransaction", null, new ViewDataDictionary { { "orientation", "Landscape" } })
 
 
 
