--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", "ReportsSmart")">
+                            <a href="@Url.Action("Selection", "Reports")">
                                 <i class="fa fa-flag fa-fw"></i> Reports Dashboard
                             </a>
                         </li>
