--- a/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
@@ -48,10 +48,34 @@
         <div class="panel-body">
             <div style="display:none" id="idhead">
                 @Html.Partial("../_PartialHead", null, new ViewDataDictionary { { "Title", "Cash load" } })
-               
-            </div>
-            @Html.Partial("../_PartialTable")
 
+            </div>
+            @if (TempData["List"] != null)
+    {
+        <!-- Single button -->
+
+        <div class="row">
+            <div class="col-sm-9"></div>
+            <div class="col-sm-3" style="text-align: right;">
+                <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
+                    <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"] + ".xls")'  ,'','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                    <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"] + ".doc")'  ,'idhead','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+
+                </div>
+                <p></p>
+            </div>
+        </div>
+}
+            @Html.Partial("../_PartialTable")
+            @using (Html.BeginForm("Export", "Reports", FormMethod.Post))
+    {
+        <input type="hidden" name="html" />
+        <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
+        <input type="hidden" name="orientation" value="Portrait" />
+        <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
+
+}
             <div>
                 @Html.ActionLink("Back to List", "Index")
 
@@ -72,7 +96,7 @@ else
     
 
     $(function () {
-
+      
         $("#EndDate").datepicker({
             dateFormat: "mm/dd/yy"
         });
