--- a/OctagonPlatform/Views/Subscription/Table.cshtml
+++ b/OctagonPlatform/Views/Subscription/Table.cshtml
@@ -94,7 +94,9 @@
                 @Html.LabelFor(model => model.Format, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
 
-                    @Html.DropDownList("Format", null,  htmlAttributes: new { @class = "form-control" })
+                   
+                    @Html.DropDownListFor(model => model.Format, Model.FormatList, new { @class = "form-control" })
+
                     @Html.ValidationMessageFor(model => model.Format, "", new { @class = "text-danger" })
                 </div>
             </div>
