--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -71,6 +71,11 @@
             @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
             @Html.ValidationMessageFor(m => m.IsLocked)
         </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.TimeZoneInfo)
+            @Html.DropDownListFor(model => model.TimeZoneInfo, Model.TimeZoneList, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.IsLocked)
+        </div>
         <input type="hidden" id="permissions" name="permissions1" value="" />
 
         @Html.Partial("../Permissions/Sections/PermissionTree")
