--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -70,6 +70,11 @@
                 @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
                 @Html.ValidationMessageFor(m => m.IsLocked)
             </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.TimeZoneInfo)
+                @Html.DropDownListFor(model => model.TimeZoneInfo, Model.TimeZoneList, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.IsLocked)
+            </div>
         </div>
     </div>
     <div class="col-md-6">
